@@ -13,6 +13,8 @@
     calculator) directly. This will solve many of the problems we have 
     more elegantly. 
 
+  + Rspec 3 syntax, though hideous, should now work. 
+
   - Drops 1.8.7 compatibility. 
 
   ! A performance anomaly when parsing multibyte characters has been detected
